# shoppy

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
scripts/: run.py
src/shoppy/: __init__.py  shopping_list.py
