[project]
name = "shoppy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rob-andrew-ellis", email = "robandrewellis@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
shoppy = "shoppy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "ruff>=0.7.1",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["D101", "D102", "D103"]

[tool.ruff.lint.pydocstyle]
convention = "google"
